# latexfogel

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/workflows/: build-docker.yml
chore/: publish.sh
src/: discord.rs  docker.rs  latex.rs  main.rs  pdf.rs  typst.rs  wolframalpha.rs
