[package]
name = "latexfogel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tempfile = "3.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20" }
tokio = { version = "1.32.0", features = ["full"] }
poise = "0.5.6"
image = "0.24.7"
env_logger = "0.10.0"
log = "0.4.20"
clap = { version = "4.5.4", features = ["derive", "deprecated"] }
typst = "0.11.0"
typst-render = "0.11.0"
fontdb = "0.16.2"
comemo = "0.4.0"
