[package]
name = "latexfogel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive", "deprecated"] }
comemo = "0.4.0"
env_logger = "0.10.0"
fontdb = "0.16.2"
image = "0.24.7"
log = "0.4.20"
poise = "0.5.6"
reqwest = { version = "0.11.20", default-features = false, features = [
    "rustls-tls-native-roots",
] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["full"] }
typst = "0.11.0"
typst-assets = { version = "0.11.0", features = ["fonts"] }
typst-render = "0.11.0"
